@startuml Logbook_Data_Dictionary
title Digital Logbook — data dictionary\n(name | type | length | default | constraint)\nSource: database/logbook_schema_ddl.sql

skinparam shadowing false
skinparam linetype ortho
skinparam entity {
  BackgroundColor #FEFEFF
  BorderColor #333333
}
skinparam roundcorner 8
hide circle
left to right direction

' --- Legend (reference) ---
legend top left
  Line format after colon:
  **type** | **L:**length | **D:**default | **constraints**
  L:- means scalar (no varchar length). L:MAX = NVARCHAR(MAX).
  FK targets are listed in constraints; ON DELETE CASCADE shown as **CASCADE**.
end legend

entity "users" as users {
  *id: INT | L:- | D:- | PK IDENTITY(1,1)
  --
  username: NVARCHAR | L:50 | D:- | NN UQ
  password: NVARCHAR | L:255 | D:- | NN
  user_type: NVARCHAR | L:20 | D:- | NN CK IN('admin','teacher','student','working_student')
  account_status: NVARCHAR | L:20 | D:'active' | CK IN('pending','active','archived','deactivated','deleted','rejected')
  is_active: BIT | L:- | D:1 | -
  archived_at: DATETIME | L:- | D:NULL | -
  deactivated_at: DATETIME | L:- | D:NULL | -
  deleted_at: DATETIME | L:- | D:NULL | -
  created_at: DATETIME | L:- | D:GETDATE() | -
  updated_at: DATETIME | L:- | D:GETDATE() | -
}

entity "profile_photos" as profile_photos {
  *user_id: INT | L:- | D:- | PK FK users.id CASCADE
  --
  photo_data: NVARCHAR | L:MAX | D:- | NN
  uploaded_at: DATETIME | L:- | D:GETDATE() | -
}

entity "departments" as departments {
  *department_code: NVARCHAR | L:20 | D:- | PK
  --
  department_name: NVARCHAR | L:200 | D:- | NN UQ
  description: NVARCHAR | L:MAX | D:- | -
  is_active: BIT | L:- | D:1 | -
  created_at: DATETIME | L:- | D:GETDATE() | -
  updated_at: DATETIME | L:- | D:GETDATE() | -
}

entity "admins" as admins {
  *id: INT | L:- | D:- | PK FK users.id CASCADE
  --
  admin_id: NVARCHAR | L:50 | D:- | NN UQ
  first_name: NVARCHAR | L:100 | D:- | NN
  middle_name: NVARCHAR | L:100 | D:- | -
  last_name: NVARCHAR | L:100 | D:- | NN
  email: NVARCHAR | L:255 | D:- | -
  contact_number: NVARCHAR | L:20 | D:- | -
  created_at: DATETIME | L:- | D:GETDATE() | -
  updated_at: DATETIME | L:- | D:GETDATE() | -
}

entity "teachers" as teachers {
  *id: INT | L:- | D:- | PK FK users.id CASCADE
  --
  teacher_id: NVARCHAR | L:50 | D:- | NN UQ
  first_name: NVARCHAR | L:100 | D:- | NN
  middle_name: NVARCHAR | L:100 | D:- | -
  last_name: NVARCHAR | L:100 | D:- | NN
  email: NVARCHAR | L:255 | D:- | -
  contact_number: NVARCHAR | L:20 | D:- | -
  department_code: NVARCHAR | L:20 | D:- | FK departments.department_code
  created_at: DATETIME | L:- | D:GETDATE() | -
  updated_at: DATETIME | L:- | D:GETDATE() | -
}

entity "students" as students {
  *id: INT | L:- | D:- | PK FK users.id CASCADE
  --
  student_id: NVARCHAR | L:50 | D:- | NN UQ
  first_name: NVARCHAR | L:100 | D:- | NN
  middle_name: NVARCHAR | L:100 | D:- | -
  last_name: NVARCHAR | L:100 | D:- | NN
  email: NVARCHAR | L:255 | D:- | -
  contact_number: NVARCHAR | L:20 | D:- | -
  department_code: NVARCHAR | L:20 | D:- | FK departments.department_code
  is_working_student: BIT | L:- | D:0 | -
  archived_at: DATETIME | L:- | D:- | -
  deletion_scheduled_at: DATETIME | L:- | D:- | -
  created_at: DATETIME | L:- | D:GETDATE() | -
  updated_at: DATETIME | L:- | D:GETDATE() | -
}

entity "subjects" as subjects {
  *subject_code: NVARCHAR | L:20 | D:- | PK
  --
  description: NVARCHAR | L:MAX | D:- | -
  created_at: DATETIME | L:- | D:GETDATE() | -
  updated_at: DATETIME | L:- | D:GETDATE() | -
}

entity "classes" as classes {
  *class_id: INT | L:- | D:- | PK IDENTITY(1,1)
  --
  subject_code: NVARCHAR | L:20 | D:- | NN FK subjects.subject_code
  teacher_id: INT | L:- | D:- | NN FK teachers.id
  edp_code: NVARCHAR | L:50 | D:- | UQ
  descriptive_title: NVARCHAR | L:255 | D:- | -
  section: NVARCHAR | L:50 | D:- | -
  schedule: NVARCHAR | L:100 | D:- | -
  room: NVARCHAR | L:50 | D:- | -
  semester: NVARCHAR | L:20 | D:- | -
  school_year: NVARCHAR | L:9 | D:- | -
  is_active: BIT | L:- | D:1 | -
  is_archived: BIT | L:- | D:0 | -
  created_by_user_id: INT | L:- | D:- | NN FK users.id
  created_at: DATETIME | L:- | D:GETDATE() | -
  updated_at: DATETIME | L:- | D:GETDATE() | -
}

entity "classlist" as classlist {
  *class_id: INT | L:- | D:- | PK(comp) NN FK classes.class_id CASCADE
  *student_id: INT | L:- | D:- | PK(comp) NN FK students.id CASCADE
  --
  enrollment_date: DATE | L:- | D:- | NN
  status: NVARCHAR | L:20 | D:'active' | CK IN('active','dropped','completed')
  is_archived: BIT | L:- | D:0 | -
  created_at: DATETIME | L:- | D:GETDATE() | -
  updated_at: DATETIME | L:- | D:GETDATE() | -
}

entity "student_archived_classes" as student_archived_classes {
  *student_id: INT | L:- | D:- | PK(comp) NN FK students.id CASCADE
  *class_id: INT | L:- | D:- | PK(comp) NN FK classes.class_id CASCADE
  --
  archived_at: DATETIME | L:- | D:GETDATE() | NN
  updated_at: DATETIME | L:- | D:GETDATE() | NN
}

entity "attendance_sessions" as attendance_sessions {
  *session_id: INT | L:- | D:- | PK IDENTITY(1,1)
  --
  class_id: INT | L:- | D:- | NN FK classes.class_id CASCADE
  attendance_date: DATE | L:- | D:- | NN
  session_name: NVARCHAR | L:255 | D:- | NN
  status: NVARCHAR | L:20 | D:'open' | NN CK IN('open','closed')
  is_archived: BIT | L:- | D:0 | NN
  class_duration_minutes: INT | L:- | D:NULL | -
  grace_period_minutes: INT | L:- | D:NULL | -
  opened_at: DATETIME | L:- | D:NULL | -
  closed_at: DATETIME | L:- | D:NULL | -
  created_by_user_id: INT | L:- | D:- | NN FK users.id
  created_at: DATETIME | L:- | D:GETDATE() | -
  updated_at: DATETIME | L:- | D:GETDATE() | -
}

entity "attendance" as attendance {
  *id: INT | L:- | D:- | PK IDENTITY(1,1)
  --
  class_id: INT | L:- | D:- | NN FK classes.class_id CASCADE
  student_id: INT | L:- | D:- | NN FK students.id CASCADE
  attendance_date: DATE | L:- | D:- | NN
  session_id: INT | L:- | D:NULL | logical -> attendance_sessions.session_id (no FK in DDL)
  status: NVARCHAR | L:20 | D:NULL | CK IN('present','absent','late') OR NULL
  time_in_at: DATETIME2 | L:- | D:NULL | -
  remarks: NVARCHAR | L:MAX | D:- | -
  is_archived: BIT | L:- | D:0 | -
  created_at: DATETIME | L:- | D:GETDATE() | -
  updated_at: DATETIME | L:- | D:GETDATE() | -
  .. table ..
  UQ(class_id,student_id,attendance_date,session_id)
}

entity "log_entries" as log_entries {
  *id: INT | L:- | D:- | PK IDENTITY(1,1)
  --
  user_id: INT | L:- | D:- | NN FK users.id
  pc_number: NVARCHAR | L:50 | D:- | -
  login_time: DATETIME | L:- | D:GETDATE() | -
  logout_time: DATETIME | L:- | D:- | -
  is_archived: BIT | L:- | D:0 | -
  archived_at: DATETIME | L:- | D:- | -
  archived_by_user_id: INT | L:- | D:- | FK users.id
}

entity "user_session_heartbeats" as user_session_heartbeats {
  *user_id: INT | L:- | D:- | PK NN FK users.id CASCADE
  --
  last_seen: DATETIME | L:- | D:GETDATE() | NN
  created_at: DATETIME | L:- | D:GETDATE() | NN
  updated_at: DATETIME | L:- | D:GETDATE() | NN
}

entity "feedback" as feedback {
  *id: INT | L:- | D:- | PK IDENTITY(1,1)
  --
  student_id: INT | L:- | D:- | NN FK students.id
  pc_number: NVARCHAR | L:50 | D:- | NN
  equipment_condition: NVARCHAR | L:20 | D:'Good' | CK IN('Good','Minor Issue','Not Working')
  monitor_condition: NVARCHAR | L:20 | D:'Good' | CK IN('Good','Minor Issue','Not Working')
  keyboard_condition: NVARCHAR | L:20 | D:'Good' | CK IN('Good','Minor Issue','Not Working')
  mouse_condition: NVARCHAR | L:20 | D:'Good' | CK IN('Good','Minor Issue','Not Working')
  comments: NVARCHAR | L:MAX | D:- | -
  working_student_notes: NVARCHAR | L:MAX | D:- | -
  status: NVARCHAR | L:20 | D:'pending' | CK IN('pending','confirmed','rejected','forwarded','resolved')
  admin_status: NVARCHAR | L:20 | D:'pending' | CK IN('pending','resolved')
  admin_resolved_at: DATETIME | L:- | D:- | -
  priority: NVARCHAR | L:20 | D:'medium' | CK IN('low','medium','high','critical')
  verified_by_user_id: INT | L:- | D:- | FK users.id
  verified_at: DATETIME | L:- | D:- | -
  forwarded_by_user_id: INT | L:- | D:- | FK users.id
  forwarded_at: DATETIME | L:- | D:- | -
  date_submitted: DATETIME | L:- | D:GETDATE() | -
  is_archived: BIT | L:- | D:0 | -
  archived_at: DATETIME | L:- | D:- | -
  archived_by_user_id: INT | L:- | D:- | FK users.id
  created_at: DATETIME | L:- | D:GETDATE() | -
  updated_at: DATETIME | L:- | D:GETDATE() | -
}

entity "registration_approvals" as registration_approvals {
  *id: INT | L:- | D:- | PK IDENTITY(1,1)
  --
  user_id: INT | L:- | D:- | NN UQ FK users.id CASCADE
  approved_by_user_id: INT | L:- | D:- | FK users.id
  status: NVARCHAR | L:20 | D:'pending' | CK IN('pending','approved','rejected')
  rejection_reason: NVARCHAR | L:MAX | D:- | -
  processed_at: DATETIME | L:- | D:- | -
  created_at: DATETIME | L:- | D:GETDATE() | -
  updated_at: DATETIME | L:- | D:GETDATE() | -
}

entity "password_reset_requests" as password_reset_requests {
  *id: INT | L:- | D:- | PK IDENTITY(1,1)
  --
  student_user_id: INT | L:- | D:- | NN FK users.id CASCADE
  teacher_user_id: INT | L:- | D:- | NN FK users.id
  new_password_hash: NVARCHAR | L:255 | D:- | NN
  status: NVARCHAR | L:20 | D:'pending' | NN CK IN('pending','approved','rejected')
  requested_at: DATETIME | L:- | D:GETDATE() | -
  resolved_at: DATETIME | L:- | D:NULL | -
}

entity "notifications" as notifications {
  *id: INT | L:- | D:- | PK IDENTITY(1,1)
  --
  user_id: INT | L:- | D:- | NN FK users.id CASCADE
  category: NVARCHAR | L:50 | D:- | NN
  title: NVARCHAR | L:200 | D:- | NN
  message: NVARCHAR | L:500 | D:- | NN
  tone: NVARCHAR | L:20 | D:'info' | NN CK IN('info','warning','success')
  is_read: BIT | L:- | D:0 | NN
  reference_type: NVARCHAR | L:50 | D:NULL | -
  reference_id: INT | L:- | D:NULL | -
  created_at: DATETIME | L:- | D:GETDATE() | NN
  read_at: DATETIME | L:- | D:NULL | -
}

' --- Relationships (FK overview) ---
users ||--o| profile_photos
users ||--o| admins
users ||--o| teachers
users ||--o| students
users ||--o{ classes : creates
users ||--o{ attendance_sessions : opens
users ||--o{ log_entries : user / archived_by
users ||--o| user_session_heartbeats
users ||--o{ feedback : verifies
users ||--o{ feedback : forwards
users ||--o{ feedback : archives
users ||--o{ registration_approvals : approves
users ||--o| registration_approvals : pending user
users ||--o{ password_reset_requests : student
users ||--o{ password_reset_requests : teacher
users ||--o{ notifications

departments ||--o{ teachers
departments ||--o{ students

subjects ||--o{ classes
teachers ||--o{ classes

classes ||--o{ classlist
students ||--o{ classlist

classes ||--o{ student_archived_classes
students ||--o{ student_archived_classes

classes ||--o{ attendance
students ||--o{ attendance
classes ||--o{ attendance_sessions

students ||--o{ feedback

@enduml
